--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,8 @@
   <link href="assets/css/metismenu.min.css" rel="stylesheet" type="text/css">
   <link href="assets/css/icons.css" rel="stylesheet" type="text/css">
   <link href="assets/css/style.css" rel="stylesheet" type="text/css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
+
   <!-- jQuery  -->
   <script src="assets/js/jquery.min.js"></script>
   <script src="assets/js/bootstrap.bundle.min.js"></script>
@@ -29,6 +31,7 @@
   <script src="assets/js/morris.min.js"></script>
   <script src="assets/js/raphael.min.js"></script>
   <script src="assets/js/dashboard.init.js"></script>
+  
   
   <!-- App js -->
   <script src="assets/js/app.js"></script>
@@ -44,6 +47,9 @@
   </noscript>
   <div id="app"></div>
   <!-- built files will be auto injected -->
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"></script>
+
 </body>
 
 </html>
