--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,9 @@
   <script src="assets/js/raphael.min.js"></script>
   <script src="assets/js/dashboard.init.js"></script>
   
-  
+  <link rel="stylesheet" href="path/to/bootstrap.min.css">
+  <script src="path/to/jquery.min.js"></script>
+  <script src="path/to/bootstrap.min.js"></script>
   <!-- App js -->
   <script src="assets/js/app.js"></script>
   <title>
